# Qt_Toys

./: .directory  .gitignore  Readme.md
ColorDetector/: ColorDetectController.h  ColorDetector.cpp  ColorDetector.h  ColorDetector.pro  detectColor.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processdialog.cpp  processdialog.h  processdialog.ui
ImageViewer/: ImageProcessor.cpp  ImageProcessor.h  ImageViewer  ImageViewer.pro  Makefile  MorphoDialog.cpp  MorphoDialog.h  MorphoDialog.ui  MorphoProcessor.cpp  MorphoProcessor.h  SaltDialog.cpp  SaltDialog.h  SaltDialog.ui  SaltProcessor.cpp  SaltProcessor.h  adjustdialog.cpp  adjustdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
TinyEditor/: CMakeLists.txt  Makefile  Readme.md  TinyEditor.pro  excutable  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_finddialog.cpp  moc_mainwindow.cpp  qrc_myResources.cpp
VideoPlayer/: .directory  DilationDialog.cpp  DilationDialog.h  DilationDialog.ui  DilationProcessor.cpp  DilationProcessor.h  ErosionDialog.cpp  ErosionDialog.h  ErosionDialog.ui  ErosionProcessor.cpp  ErosionProcessor.h  MorphologyDialog.cpp  MorphologyDialog.h  MorphologyDialog.ui  VideoPlayer.pro  VideoProcessor.cpp  VideoProcessor.h  adjustdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
